fix(tags): tag list word wrap fix (#68)

--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -90,6 +90,58 @@
     margin: 0.8rem 0 1.2rem 0;
     text-align: justify;
 
+    .margin-tb-s {
+      margin-top: 1rem !important;
+      margin-bottom: 1rem !important;
+    }
+
+    .margin-tb-m {
+      margin-top: 2rem !important;
+      margin-bottom: 2rem !important;
+    }
+
+    .width-60 {
+      display: block;
+      width: 50%;
+      margin: 0 auto;
+
+      @media (max-width: 720px) {
+        width: 100%;
+      }
+    }
+
+    img {
+      background-color: transparent;
+    }
+
+    .custom-block.info {
+      padding: 1rem 1.5rem;
+      font-size: 1.2em;
+      background: #EFF3F8;
+
+      p:first-child {
+        svg {
+          margin-right: 1rem;
+
+          path {
+            fill: #188430;
+          }
+        }
+
+        &::before {
+          content: '\f0eb';
+          font-family: "Font Awesome 5 Free";
+          font-weight: 400;
+          display: none;
+        }
+      }
+
+      p {
+        margin: 0;
+        padding: 0;
+      }
+    }
+
     iframe {
       width: 100%;
       height: 580px;
@@ -128,5 +180,20 @@
       background: #7fd5ea;
       text-shadow: none;
     }
+  }
+}
+
+.footer-links {
+  .left, .center, .right {
+    flex: 1;
+    text-align: center;
+  }
+
+  .left {
+    text-align: left;
+  }
+
+  .right {
+    text-align: right;
   }
 }
