--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -10,6 +10,11 @@
       text-decoration: underline;
     }
   }
+
+  .tags-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .tag-heading {
